gitops/apps/status/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  labels:
    app: gatus
spec:
  selector:
    app: gatus
  ports:
    - name: http
      port: 8080
      targetPort: http
